--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
         <javac srcdir="${src}" destdir="${output}">
             <classpath>
                 <fileset dir="${lib}">
-                    <include name="**/*.jar"/>
+                    <include name="*.jar"/>
                 </fileset>
             </classpath>
         </javac>
